# NL-Augmenter

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  SubsetsRandomScrambledComplexFreq.py  SubsetsRandomScrambledComplexFreq_batch.py  TestRunner.py  Transformations.py  config.py  dataset.py  datasets.py  evaluate.py  initialize.py  main.py  noun_pairs.json  pyproject.toml  requirements-light.txt  requirements.txt  setup.cfg  setup.py  test.json
Guidelines/: README.md
NL_Augmenter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
analysis/: README.md  filters_mapping_analysis.py  keyword_mappings.json  mapping_analysis_utils.py  requirements.txt  transformations_mapping_analysis.py
challenge_sets/: ChallengeSetList.py  ChallengeSetTransformation.py  SubsetsRandomScrambledComplexFreq.py  SubsetsRandomScrambledComplexFreq_batch.py  build_czech_challenges.py  build_webnlg_challenges.py
common/: NumericalTransformation.py  dataset.py  mapper.py
data_transformations/: DataTransformation.py  DataTransformationList.py  (+1 more)
docs/: doc.md  (+1 more)
transformations/gender_randomizer/coreferee/: NOTICE  README.md  SHORTREADME.md  pyproject.toml  setup.cfg
transformations/gender_randomizer/coreferee/coreferee/: __init__.py  __main__.py  annotation.py  data_model.py  errors.py  manager.py  rules.py  tendencies.py  test_utils.py
transformations/gender_randomizer/coreferee/coreferee/lang/common/data/: LICENSE
transformations/gender_randomizer/coreferee/coreferee/lang/de/: config.cfg  language_specific_rules.py
transformations/gender_randomizer/coreferee/coreferee/lang/de/data/: LICENSE
transformations/gender_randomizer/coreferee/coreferee/lang/en/: config.cfg  language_specific_rules.py
transformations/gender_randomizer/coreferee/coreferee/lang/en/data/: LICENSE
transformations/gender_randomizer/coreferee/coreferee/lang/pl/: config.cfg  language_specific_rules.py
transformations/gender_randomizer/coreferee/coreferee/lang/pl/data/: COPYING  LICENSE
transformations/gender_randomizer/coreferee/coreferee/training/: loaders.py  model.py  train.py
transformations/gender_randomizer/coreferee/models/de/: setup.cfg
transformations/gender_randomizer/coreferee/models/en/: pyproject.toml  setup.cfg
transformations/gender_randomizer/coreferee/models/pl/: setup.cfg
(+1306 files in other folders)
