# Black formatting
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''

# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
skip_gitignore = true
virtual_env = "venv"

# Pytest
[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
# markers can be added to exclude heavy methods

# Pytest coverage
#[tool.coverage.run]
#omit = [""]

# Pytest report
[tool.coverage.report]
fail_under = 90.0
skip_empty = true
show_missing = true

[build-system]
requires = ["setuptools", "wheel"]

