[metadata]
name = coreferee
version = 1.0.1
description = Coreference resolution for English, German and Polish, optimised for limited training data and easily extensible for further languages
long_description = file: SHORTREADME.md
long_description_content_type = text/markdown
url = https://github.com/msg-systems/coreferee
author = Richard Paul Hudson, msg systems ag
author_email = richard.hudson@msg.group
license = Apache License 2.0
keywords= nlp, spacy, spacy-extension, python, machine-learning, keras, coreference, anaphora, coreference-resolution, anaphora-resolution
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Natural Language :: German
    Natural Language :: Polish
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing :: Linguistic

[options]
include_package_data = True
packages = find:
python_requires = >=3.7,<3.9
install_requires =
  spacy>=3.0.5
  keras>=2.4.3
  tensorflow>=2.4.1
  numpy~=1.19.2
  #h5py~=2.10.0

[options.package_data]
* = *.dat, *.cfg
